samples/_failures_safe/1761539472_37eb98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_431b2d13.c: In function ‘main’:
./samples/SAFE/__tmp_431b2d13.c:142:12: error: missing terminating " character
  142 |     printf("Decomp
      |            ^~~~~~~
./samples/SAFE/__tmp_431b2d13.c:142:5: error: expected expression at end of input
  142 |     printf("Decomp
      |     ^~~~~~
./samples/SAFE/__tmp_431b2d13.c:142:5: error: expected declaration or statement at end of input
